fixing links on index and realigning buttons on make facet for connecting

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -483,7 +483,7 @@ body.win #login-form ul {
 }
 .option {
     width: 305px;
-    background-color: @grey;
+    background-color: @blue;
     color: white;
     font-size: 36px;
     padding: 10px 0;
@@ -595,6 +595,9 @@ body.win #login-form ul {
 .button.pink {
     background-color: @pink;
 }
+.button.grey {
+    background-color: @grey;
+}
 
 .button:hover {
     .shadow(10px, rgba(0, 0, 0, .25));
@@ -606,11 +609,11 @@ body.win #login-form ul {
 
 #edit .connect-wrapper {
     position: absolute;
-    bottom: 27px;
+    bottom: 20px;
     font-size: 18px;
 }
 #edit .connect-wrapper .title {
-    margin-bottom: 7px;
+    margin-bottom: 5px;
 }
 
 #edit .foursquare-auth, #edit .facebook-auth {
@@ -618,6 +621,7 @@ body.win #login-form ul {
     padding: 8px 9px 9px 34px;
     position: relative;
     font-size: 14px;
+    display: inline-block;
 }
 .foursquare-auth img {
     height: 20px;
@@ -630,7 +634,7 @@ body.win #login-form ul {
     background-position: 8% 50%;
     background-repeat: no-repeat;
     background-size: 20px 20px;
-    padding: 8px 5px 9px 34px;
+    padding: 8px 8px 9px 34px;
 }
 
 #cases {
